[package]
name = "rustos"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
